feat: limit/offset based pagination and some helper functions for filtering params parsing and defaults
